lab7-music-separation-kubernetes-masked-user-main/rest/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-server
spec:
  selector:
    matchLabels:
      app: rest-server
  replicas: 1
  template:
    metadata:
      labels:
        app: rest-server
    spec:
      containers:
      - name: rest-server
        image: adityasriram34/demucs-rest:latest 
        ports:
        - containerPort: 5000
