lab7-music-separation-kubernetes-masked-user-main/rest/rest_serivce.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-service
spec:
  selector:
    app: rest-server
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: NodePort  # Enables access from outside the cluster
